# Pdf_rag

./: README.md  pyproject.toml  rag_simple.py
