[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"beautifulsoup4>=4.12.3",
	"ebooklib>=0.18",
	"faiss-cpu>=1.9.0",
	"numpy>=1.26.4",
	"pandas>=2.2.3",
	"pypdf>=5.0.0",
	"qdrant-client>=1.12.1",
	"requests>=2.32.3",
	"streamlit>=1.39.0",
	"langchain>=0.3.0",
	"langchain-community>=0.3.0",
	"langchain-text-splitters>=0.0.1",
]
